5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4177/executions/1679_1100.log
== TEST (2019-05-01 21:09:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print("Entrada:",a")
if(a==2:)
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20)
	print("Animal: Mico-leao-dourado:")
elif(a==50)
	print("Animal: Onca-pintada")
elif(a==100)
	print("Animal: Garoupa")	

-- ERROR:
File "XXXX", line 5
    print("Entrada:",a")
                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:09:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print("Entrada:",a)
if(a==2:)
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20)
	print("Animal: Mico-leao-dourado:")
elif(a==50)
	print("Animal: Onca-pintada")
elif(a==100)
	print("Animal: Garoupa")	

-- ERROR:
File "XXXX", line 6
    if(a==2:)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:10:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print("Entrada:",a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20)
	print("Animal: Mico-leao-dourado:")
elif(a==50)
	print("Animal: Onca-pintada")
elif(a==100)
	print("Animal: Garoupa")	

-- ERROR:
File "XXXX", line 12
    elif(a==20)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:10:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print("Entrada:",a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado:")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:10:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print("Entrada:",a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado:")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 21:10:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print("Entrada:",a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado:")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")	

-- EXECUTION TIME:
0.200758
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:10:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print("Entrada:",a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado:")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:11:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print("Entrada:",a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 21:11:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print("Entrada:",a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")	

-- EXECUTION TIME:
0.144139
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:12:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print("Entrada:",a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 21:12:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print("Entrada:",a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")

-- EXECUTION TIME:
0.154421
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
